feat(recommended-content): get all recommended content in handler and repository
