# internal/infrastructure/input/rest/controller/RecommendedContentController.go
@@ -6,6 +6,7 @@ import (
 	"github.com/Our-Hive/Our-Hive-Admin-Panel-API/internal/configuration/security"
 	"github.com/gin-gonic/gin"
 	"net/http"
+	"strconv"
 )
 
 type RecommendedContentController struct {
@@ -18,6 +19,7 @@ func NewRecommendedContentController(recommendedContentHandler application.IReco
 
 func (r RecommendedContentController) InitRoutes(router *gin.Engine) {
 	router.POST("/recommended-content", security.JwtMiddleware, security.AdminRoleMiddleware, r.CreateRecommendedContent)
+	router.GET("/recommended-content", security.JwtMiddleware, security.AdminRoleMiddleware, r.GetAllRecommendedContent)
 }
 
 // CreateRecommendedContent godoc
@@ -47,4 +49,34 @@ func (r RecommendedContentController) CreateRecommendedContent(c *gin.Context) {
 	}
 
 	c.Status(httpStatus)
+}
+
+// GetAllRecommendedContent godoc
+// @Summary Get all recommended content
+// @Description Get all recommended content
+// @Tags Recommended Content
+// @Accept json
+// @Produce json
+// @Security ApiKeyAuth
+// @Success 200 {object} []model.DigitalContent
+// @Failure 500 {object} string
+// @Router /recommended-content [get]
+func (r RecommendedContentController) GetAllRecommendedContent(c *gin.Context) {
+	pageSize, err := strconv.Atoi(c.DefaultQuery("size", "10"))
+
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	startAfter := c.DefaultQuery("startAfter", "")
+
+	contents, httpStatus, err := r.recommendedContentHandler.GetAll(pageSize, startAfter)
+
+	if err != nil {
+		c.JSON(httpStatus, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.JSON(httpStatus, contents)
 }
